--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -7,7 +7,7 @@ $red-5: #ff3466;
 $red-6: #ff0844;
 $red-7: #d9073a;
 $red-8: #b50630;
-$red-9: #b50630;
+$red-9: #910527;
 $red-10: #73041f;
 
 //White
